# HealthTech

./: OCR.py  depth.py  liveOCR.py  main.py  pyproject.toml  yolo.py
Something/: test.py
