[project]
name = "healthtech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "easyocr>=1.7.2",
    "tensorflow>=2.20.0",
    "requests>=2.31.0",
    "ultralytics>=8.4.26",
    "opencv-python<=4.11.0.86",
    "matplotlib>=3.10.9",
]

